--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "./src/app.js",
   "dependencies": {
-    "botbuilder": "^3.13.1",
+    "botbuilder": "^3.14.1",
     "botbuilder-azure": "^3.0.4",
     "dotenv": "^5.0.1",
+    "npm": "^5.8.0",
     "restify": "^5.2.1"
   },
   "devDependencies": {
